[package]
name = "ruxel-basic"
version = "0.1.0"
authors = ["aaaa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.0.1"
futures-util = "0.3.12"
byteorder = "1.4.2"